# magento-airflow

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
airflow/dags/: magento_order_sync.py  magento_product_sync.py
apache_airflow_provider_magento/hooks/: magento.py
apache_airflow_provider_magento/operators/: asyncrest.py  customer.py  dataimport.py  graphql.py  magento.py  rest.py  sales.py
example_dags/: magento_customer_order_rest_demo.py  magento_guest_order_rest_demo.py  magento_order.py  magento_order_process.py  magento_order_sync.py
example_dags/dags/: magento_create_customer.py  magento_order_sync.py
src/airflow_magento_provider/: setup.py
src/airflow_magento_provider/airflow_magento_provider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/airflow_magento_provider/airflow_magento_provider/hooks/: magento.py  magento_hooks.py
src/airflow_magento_provider/airflow_magento_provider/operators/: customer.py  order_sync_operator.py  (+2 more)
src/apache_airflow_provider_magento/: __init__.py
src/apache_airflow_provider_magento/hooks/: magento.py
src/apache_airflow_provider_magento/operators/: __init__.py  asyncrest.py  dataimport.py  graphql.py  rest.py
src/apache_airflow_provider_magento/utils/: paginate.py
src/example_dags/: adobe_commerce_import.py  magento_async.py  magento_bulk_create_customers.py  magento_bulk_delete_products.py  magento_create_customer.py  magento_customer_graphql.py  magento_customer_order_rest_demo.py  magento_get_order.py  magento_paginated.py
src/tests/hooks/: test_magento.py
(+2 files in other folders)
