[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-airflow-provider-magento"
version = "0.4"
description = "custom provider for Magento 2 - Apache Airflow"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Sivakumar Koduru", email = "sivajik34@gmail.com" }
]
urls = {
    "Homepage" = "https://github.com/sivajik34/magento-airflow",
}

[project.dependencies]
apache-airflow = ">=2.8.0"
requests_oauthlib = "*"
requests = "*"

[tool.setuptools.packages.find]
where = ["."]

